--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -33,28 +33,28 @@
 	
 	<main class="maincards flex-column">
 	
-		<h3 class="titulorecetas">Recetas saladas</h3>
+		<h3>Recetas saladas</h3>
 			
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/lasagna.png" width="200" height="200" alt="pizza"/>
-				<h6 class="recetasdulcestitulos">Pizza</h6> /*--cambiar a pizza--*/
+				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png" width="200" height="200" alt="pizza"/>
+				<h6>Pizza</h6> /*--cambiar img a pizza--*/
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/ñoquis.png" width="200" height="200" alt="ñoquis"/>
-				<h6 class="recetasdulcestitulos">&Ntilde;oquis</h6>
+				<img class="selecciondeimagenes" src="img/recetas saladas/ñoquis.png" width="200" height="200" alt="ñoquis"/>
+				<h6>&Ntilde;oquis</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/sandwich.png" width="200" height="200" alt="sandwich"/>
-				<h6 class="recetasdulcestitulos">Sandwich</h6>
+				<img class="selecciondeimagenes" src="img/recetas saladas/sandwich.png" width="200" height="200" alt="sandwich"/>
+				<h6>Sandwich</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/tacos.png">
-				<h6 class="recetasdulcestitulos">Tacos</h6>  
+				<img class="selecciondeimagenes" src="img/recetas saladas/tacos.png">
+				<h6>Tacos</h6>  
 			</div>
 			
 		</section>
@@ -62,23 +62,23 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/hamburguesa.png">
-				<h6 class="recetasdulcestitulos">Hamburguesa</h6> 
+				<img class="selecciondeimagenes" src="img/recetas saladas/hamburguesa.png">
+				<h6>Hamburguesa</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/croquetas.png">
-				<h6 class="recetasdulcestitulos">Croquetas</h6> 
+				<img class="selecciondeimagenes" src="img/recetas saladas/croquetas.png">
+				<h6>Croquetas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/empanadas.png">
+				<img class="selecciondeimagenes" src="img/recetas saladas/empanadas.png">
 				<h6 class="recetasdulcestitulos">Empanadas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/lasagna.png">
-				<h6 class="recetasdulcestitulos">Lasagna</h6> 
+				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png">
+				<h6>Lasagna</h6> 
 			</div>
 			
 		</section>
