--- a/recetas.html
+++ b/recetas.html
@@ -39,13 +39,13 @@
 		<section class="circulos flex-row">
 			
 				<a href="recetas dulces.html"><article>
-					<img src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
-					<h3 class="recetasdulcestitulos">Dulces</h3>
+					<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
+					<h3 class="letrasnaranjas">Dulces</h3>
 				</article></a>
 			
 				<a href="recetas saladas.html"><div>
-					<img src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
-					<h3 class="recetasdulcestitulos">Saladas</h3>
+					<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
+					<h3 class="letrasnaranjas">Saladas</h3>
 				</div></a>
 			
 		</section>
