--- a/restaurantes.html
+++ b/restaurantes.html
@@ -40,22 +40,22 @@
 			<a href="sintaxispalermo.html">
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
+				<img class="selecciondeimagenes" src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
 				<h6 class="recetasdulcestitulos">Sintaxis Palermo</h6>	 
 			</div></a>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/campobravo.png" width="200" height="200" alt="campo bravo"/>
+				<img class="selecciondeimagenes" src="img/restaurantes/campobravo.png" width="200" height="200" alt="campo bravo"/>
 				<h6 class="recetasdulcestitulos">Campo Bravo</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/eggs_gree.png" width="200" height="200" alt="eggs"/>
+				<img class="selecciondeimagenes" src="img/restaurantes/eggs_gree.png" width="200" height="200" alt="eggs"/>
 				<h6 class="recetasdulcestitulos">Eggs &amp; Greens</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/goutcafé.png" width="200" height="200" alt="gout"/>
+				<img class="selecciondeimagenes" src="img/restaurantes/goutcafé.png" width="200" height="200" alt="gout"/>
 				<h6 class="recetasdulcestitulos">Gout Caf&eacute;</h6>
 			</div>
 			
@@ -64,22 +64,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/launion.png" width="200" height="200" alt="launion"/>
+				<img class="selecciondeimagenes" src="img/restaurantes/launion.png" width="200" height="200" alt="launion"/>
 				<h6 class="recetasdulcestitulos">La uni&oacute;n</h6>	 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/letitv.png" width="200" height="200" alt="letitv"/>
+				<img class="selecciondeimagenes" src="img/restaurantes/letitv.png" width="200" height="200" alt="letitv"/>
 				<h6 class="recetasdulcestitulos">Let it V</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/osanegra.png" width="200" height="200" alt="osanegra"/>
+				<img class="selecciondeimagenes" src="img/restaurantes/osanegra.png" width="200" height="200" alt="osanegra"/>
 				<h6 class="recetasdulcestitulos">Osa Negra</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/whoopies.png" width="200" height="200" alt=""/>
+				<img class="selecciondeimagenes" src="img/restaurantes/whoopies.png" width="200" height="200" alt=""/>
 				<h6 class="recetasdulcestitulos">Whoopies</h6>
 			</div>
 			
