--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -32,9 +32,9 @@
 		
 	</header>
 	
-	<main>
+	<main class="flex-column">
 		<img class="imgprincipalsintaxis" src="img/restaurantes/local-palermo.jpg" width="1080" height="384" alt="fotosintaxis"/>
-		
+		<section class="flex-row">
 		<div class="flex-row">
 			<aside class="aside">
 				<section class="datos">
@@ -79,6 +79,7 @@
 			
 			</article>
 		</div>
+			</section>
 	</main>
 	
 	<footer>
