--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -38,9 +38,11 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
+				<a href="pizza.html">
 				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png" width="200" height="200" alt="pizza"/>
-				<h6>Pizza</h6> /*--cambiar img a pizza--*/
-			</div>
+				<h6> Pizza</h6> /*--cambiar img a pizza--*/
+				</a>
+			</div> 
 			
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/recetas saladas/ñoquis.png" width="200" height="200" alt="ñoquis"/>
