--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -9,7 +9,7 @@
 
 <body>
 	
-	<main>
+	<main class="ingresar">
 		
 		<section class="logo">
 			<img src="img/logo circulo blanco.png" width="420" height="420" alt="logo"/> 
