--- a/registrarse.html
+++ b/registrarse.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<main>
+	<main class="ingresar">
 		<section class="logo">
 			<img src="img/logo circulo blanco.png" width="420" height="420" alt="logo"/> 
 		</section>
