--- a/foro.html
+++ b/foro.html
@@ -35,12 +35,17 @@
 	<main class="foro flex-column">
 		
 		<section class="flex-row" id="encabezadoforo">
-			<img src="img/foro/1.png" width="333" height="345" alt="imgforo"/>
-		 <div class="introforo"> 
-			<h1 class="center">Bienvenidx a la comunidad</h1>
-			<h12 class="center">Tacc Free</h12>
-			<h9 class="center">Donde podrás dejar los comentarios y tips que quieras. Además vas a encontrar páginas que recomendamos para el mundo celíaco.</h9>
-			</div>
+			
+			
+		  <img src="img/foro/personas foro.png" width="330" height="324" alt=""/>
+			
+		  <img class="globo" src="img/foro/globo foro.png" width="150" height="141" alt=""/>
+			
+<div class="introforo"> 
+	   <h1 class="center">Bienvenidx a la comunidad</h1>
+	   <h12 class="center">Tacc Free</h12>
+	   <h9 class="center">Donde podrás dejar los comentarios y tips que quieras. Además vas a encontrar páginas que recomendamos para el mundo celíaco.</h9>
+	   </div>
 		
 		</section>
 		
@@ -74,6 +79,20 @@
 				
 			</div>
 			
+			
+			<div class="flex-row preguntas">
+				<form method="post" action="" target="_blank" enctype="text/plain">
+						<label class="letrasverdes" for="Mensaje">Deja tu pregunta</label>
+						<textarea name="Mensaje" id="pregunta" maxlength="800"></textarea>
+					
+					</form>
+				<article class="botonesformulario">
+					<input type="reset" value="Borrar" class="botoncontacto">
+					<input type="submit" value="Enviar" formenctype="text/plain" class="botoncontacto">
+				</article>
+			</div>
+			
+			
 			<h11 class="center">Sitios que recomendamos</h11>
 			
 			<div class="flex-row sitiosrecomendados">
@@ -96,7 +115,7 @@
 				<div class="flex-column"><p>Donde podrás encontrar recetas sin TACC muy fáciles y mucha información útil.</p>
 				<div><h5 class="botonesforo">Visita la web</h5></div></div>
 			</div>
-			
+		
 			
 		</section>
 		
