--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -32,9 +32,9 @@
 		</nav>
 		
 	</header>
-	<img class="imgprincipalsintaxis" src="img/restaurantes/local-palermo.jpg" width="1080" height="384" alt="fotosintaxis"/>
+	
 		<main class="flex-column">
-		
+		<img class="imgprincipalsintaxis" src="img/restaurantes/local-palermo.jpg" width="1080" height="384" alt="fotosintaxis"/>
 		<section class="flex-row">
 		<div class="flex-row">
 			<aside class="aside">
@@ -60,7 +60,10 @@
 					<h8>Excelente atención, volvería mil veces más. Riquisimo todo</h8>
 					<a class="botonverforo" target="_blank" href="foro.html">Ver foro</a>
 					<h6>Contanos que te pareció este lugar</h6>
-				<h8>Comentar</h8>
+					<form method="post" action="" target="_blank" enctype="text/plain">
+						<label for="Mensaje">Comentar</label>
+						<textarea name="Mensaje" id="Mensaje" maxlength="800"></textarea>
+					</form>
 				</section>
 			</aside>
 		
