cambios boton ver foro y favicon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TACC FREE</title>
+	<title>TACC FREE</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
@@ -46,7 +47,7 @@
 			
 					<nav class="registro flex-row">
 						<ul class="boton">
-							<li><a href="iniciar-sesion.html">Iniciar sesion</a></li>
+							<li><a href="iniciar-sesion.html">Iniciar sesión</a></li>
 						</ul>
 						<ul class="boton">
 							<li><a href="registrarse.html">Registrarse</a></li>
@@ -54,7 +55,7 @@
 					</nav>
 				
 					<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
-					<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+					<p class="textosabesloquees">La celiaquía es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada. Es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensillos para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 				
 			</section>
 			
