--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Iniciar sesion | TACC FREE</title>
+	<title>TACC FREE | Iniciar sesión</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
@@ -17,10 +18,10 @@
 		
 		<section class="Formulario-inicio">
 			<form method="post" action="" target="_blank">
-				<label>Email</label>
+				<label form="email">Email</label>
 				<input class="Controles" type="text" name="email" id="email" placeholder="Ingrese su Email">
 				<hr>
-				<label>Contraseña</label>
+				<label form="contraseña">Contraseña</label>
 				<input class="Controles" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
 				<hr>
 			</form>
