--- a/recetas dulces.html
+++ b/recetas dulces.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Recetas dulces | TACC FREE</title><link href="estilos.css" rel="stylesheet" type="text/css">
+	<title>TACC FREE | Recetas dulces</title>
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
@@ -39,7 +41,7 @@
 			
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/recetas dulces/tartalimón.png" width="200" height="200" alt="tartalimon"/>
-				<h6>Tarta de limon</h6>
+				<h6>Tarta de limón</h6>
 			</div>
 			
 			<div class="cards flex-column">
@@ -49,7 +51,7 @@
 			
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/recetas dulces/budín.png" width="200" height="200" alt="budin"/>
-				<h6>Budin</h6>
+				<h6>Budín</h6>
 			</div>
 			
 			<div class="cards flex-column">
@@ -78,7 +80,7 @@
 			
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/recetas dulces/tiramisu.png" width="200" height="200" alt="tiramisu"/>
-				<h6>Tiramisu</h6>
+				<h6>Tiramisú</h6>
 			</div>
 			
 		</section>
