--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Recetas saladas | TACC FREE</title><link href="estilos.css" rel="stylesheet" type="text/css">
+	<title>TACC FREE | Recetas saladas </title><link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
@@ -40,7 +41,7 @@
 			<div class="cards flex-column">
 				<a href="pizza.html">
 				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png" width="200" height="200" alt="pizza"/>
-				<h6> Pizza</h6> /*--cambiar img a pizza--*/
+				<h6> Pizza</h6>
 				</a>
 			</div> 
 			
