--- a/recetas.html
+++ b/recetas.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Recetas | TACC FREE</title>
+	<title>TACC FREE | Recetas</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
