--- a/registrarse.html
+++ b/registrarse.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Resgitrarse | TACC FREE</title>
+	<title>TACC FREE | Registrarse </title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
@@ -15,16 +16,16 @@
 		
 		<section class="Formulario-registro">
 			<form method="post" action="" target="_blank">
-				<label>Nombre</label>
+				<label form="nombre">Nombre</label>
 				<input class="Controles registro" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
 				<hr>
-				<label>Apellido</label>
+				<label form="apellido">Apellido</label>
 				<input class="Controles registro" type="text" name="nombres" id="apellido" placeholder="Ingrese su Apellido">
 				<hr>
-				<label>Email</label>
+				<label form="email">Email</label>
 				<input class="Controles registro" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
 				<hr>
-				<label>Contraseña</label>
+				<label form="contraseña">Contraseña</label>
 			</form>
 				
 				<input class="Controles registro" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
