--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>sintaxispalermo</title>
+<title>TACC FREE | Sintaxis Palermo</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link href="css/jquery.fancybox.min.css" rel="stylesheet"/>
+	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
