tarta de limon, tiempo dificultad y cantidad de recetas

--- a/recetas dulces.html
+++ b/recetas dulces.html
@@ -39,9 +39,9 @@
 			
 		<section class="flex-row sectioncards">
 			
-			<div class="cards flex-column">
+			<div class="cards flex-column"><a href="tarta de limon.html">
 				<img class="selecciondeimagenes" src="img/recetas dulces/tartalimón.png" width="200" height="200" alt="tartalimon"/>
-				<h6>Tarta de limón</h6>
+				<h6>Tarta de limón</h6></a>
 			</div>
 			
 			<div class="cards flex-column">
