--- a/recetas dulces.html
+++ b/recetas dulces.html
@@ -13,9 +13,9 @@
 	
 	<header>
 		
-		<div class="logobotonera">
+		<section class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
-		</div>
+		</section>
 		
 		<nav class="botoneraheader">
 			<ul>
