--- a/recetas.html
+++ b/recetas.html
@@ -12,9 +12,9 @@
 <body>
 	<header>
 		
-		<div class="logobotonera">
+		<section class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
-		</div>
+		</section>
 		
 		<nav class="botoneraheader">
 			<ul>
@@ -39,15 +39,21 @@
 			
 		<section class="circulos flex-row">
 			
-				<a href="recetas dulces.html"><article>
-					<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
-					<h3 class="letrasnaranjas">Dulces</h3>
-				</article></a>
+				<a href="recetas dulces.html">
+					
+					<article>
+						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
+						<h3 class="letrasnaranjas">Dulces</h3>
+					</article>
+				</a>
 			
-				<a href="recetas saladas.html"><div>
-					<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
-					<h3 class="letrasnaranjas">Saladas</h3>
-				</div></a>
+				<a href="recetas saladas.html">
+					
+					<div>
+						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
+						<h3 class="letrasnaranjas">Saladas</h3>
+					</div>
+				</a>
 			
 		</section>
 			
