--- a/restaurantes.html
+++ b/restaurantes.html
@@ -13,9 +13,9 @@
 	
 <header>
 		
-		<div class="logobotonera">
+		<section class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
-		</div>
+		</section>
 		
 		<nav class="botoneraheader">
 			<ul>
@@ -38,12 +38,13 @@
 		<h3 class="titulorecetas">Restaurantes</h3>
 			
 		<section class="flex-row sectioncards">
-			<a href="sintaxispalermo.html">
 			
-			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
-				<h6 class="recetasdulcestitulos">Sintaxis Palermo</h6>	 
-			</div></a>
+			<a href="sintaxispalermo.html">
+				<div class="cards flex-column">
+					<img class="selecciondeimagenes" src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
+					<h6 class="recetasdulcestitulos">Sintaxis Palermo</h6>	 
+				</div>
+			</a>
 			
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/restaurantes/campobravo.png" width="200" height="200" alt="campo bravo"/>
