--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -12,9 +12,9 @@
 	
 	<header>
 		
-		<div class="logobotonera">
+		<section class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
-		</div>
+		</section>
 		
 		<nav class="botoneraheader">
 			<ul>
@@ -56,7 +56,7 @@
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/tacos.png">
+				<img src="img/recetas saladas/tacos.png" width="200" height="200" alt="tacos"/>
 				<h6>Tacos</h6>  
 			</div>
 			
@@ -65,22 +65,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/hamburguesa.png">
+				<img src="img/recetas saladas/hamburguesa.png" width="200" height="200" alt="hamburguesa"/>
 				<h6>Hamburguesa</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/croquetas.png">
+				<img src="img/recetas saladas/croquetas.png" width="200" height="200" alt="croquetas"/>
 				<h6>Croquetas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/empanadas.png">
+				<img src="img/recetas saladas/empanadas.png" width="200" height="200" alt="empanadas"/>
 				<h6 class="recetasdulcestitulos">Empanadas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png">
+				<img src="img/recetas saladas/lasagna.png" width="200" height="200" alt="lasagna"/>
 				<h6>Lasagna</h6> 
 			</div>
 			
