ultimos ajustes preentrega

--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -19,10 +19,10 @@
 		<section class="Formulario-inicio">
 			<form method="post" action="" target="_blank">
 				<label form="email">Email</label>
-				<input class="Controles" type="text" name="email" id="email" placeholder="Ingrese su Email">
+				<input class="Controles registro" type="text" name="email" id="email" placeholder="Ingrese su Email">
 				<hr>
 				<label form="contraseña">Contraseña</label>
-				<input class="Controles" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
+				<input class="Controles registro" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
 				<hr>
 			</form>
 			
