--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -40,7 +40,7 @@
 			
 			<div class="cards flex-column">
 				<a href="pizza.html">
-				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png" width="200" height="200" alt="pizza"/>
+				<img class="selecciondeimagenes" src="img/recetas saladas/pizza.jpeg" width="200" height="200" alt="pizza"/>
 				<h6> Pizza</h6>
 				</a>
 			</div> 
