--- a/registrarse.html
+++ b/registrarse.html
@@ -28,7 +28,7 @@
 				<label form="contraseña">Contraseña</label>
 			</form>
 				
-				<input class="Controles registro" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
+				<input class="Controles registro" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 carácteres">
 				<hr>
 				
 				<div>
