--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -77,7 +77,7 @@
 			
 				<div class="restaurante">
 					<p>Sintaxis es el sueño cumplido de una familia que imaginó un lugar diferente. El 17 de julio de 2012 abrió sus puertas <span class="bold">el primer restaurante de la República Argentina con la cocina estrictamente libre de gluten.</span> Sintaxis es la marca preferida entre la comunidad celíaca y quienes eligen comer sin gluten. Sus estándares de calidad y cuidado en la producción han generado gran fidelidad y seguridad para con los clientes.</p>
-					<p>Un amplio salón con capacidad para 60 cubiertos y un sector al aire libre que invita a desconectarse por un largo rato. Decisiones implícitas en cada detalle dan como resultado una ambientación con un sutil equilibrio entre lo artesanal/ecológico y el puro diseño.</p>
+					<p>Un amplio salón con capacidad para 60 cubiertos y un sector al aire libre que invita a desconectarse por un largo rato. Decisiones implícitas en cada detalle dan como resultado una ambientación con un sutil equilibrio entre lo artesanal, ecológico y el puro diseño.</p>
 				</div>
 					
 				<h2>Galería</h2>
