--- a/pizza.html
+++ b/pizza.html
@@ -127,7 +127,7 @@
 					<div class="explicaciondepaso">
 					
 						<h11>Elaboracion de la masa madre</h11>
-						<p>- En un bol mezclá la premezcla para panificados y la Maizena.</p>
+						<p>- En un bol mezclá la premezcla para panificados y la maizena.</p>
 						<p>- Realizá un hueco en el centro y sumá la levadura junto al agua.</p>
 						<p>- Formá una masa y dejá reposar por 15 minutos cubierta con papel film. Es una masa pegajosa, no te preocupes.</p>
 					
