--- a/tarta de limon.html
+++ b/tarta de limon.html
@@ -84,19 +84,19 @@
 					<div class="datosrecetas">
 						<img src="img/reloj.png" width="40" height="40" alt="reloj"/>
 						<h7>Tiempo:</h7>
-						<h8 class="medida">1 hora</h8>
+						<h8>1 hora</h8>
 					</div>
 
 					<div class="datosrecetas">
 						<img src="img/tilde.png" width="40" height="40" alt=""/>
 						<h7>Dificultad:</h7>
-						<h8 class="medida">media</h8>
+						<h8>media</h8>
 					</div>
 
 					<div class="datosrecetas">
 						<img src="img/cubiertos.png" width="40" height="40" alt=""/>
 						<h7>Porcion:</h7>
-						<h8 class="medida">6-8 personas</h8>
+						<h8>6-8 personas</h8>
 					</div>
 			
 				</section>
