ultimos ajustes para la preentrega

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			
 				<a href="restaurantes.html">
 				<article>
-					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="restaurante"/>
+					<img src="img/portadas circulares grandes/portadaresto.png" width="320" height="320" alt="portadaresto"/>
 					<h3 class="letrasblancas">Restaurantes</h3>
 				</article>
 				</a>
