cambio títulos de páginas, imágenes de png a svg

--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>TACC FREE | Iniciar sesión</title>
+	<title>Iniciar sesión</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon .ico">
@@ -20,10 +20,8 @@
 			<form method="post" action="" target="_blank">
 				<label form="email">Email</label>
 				<input class="Controles registro" type="text" name="email" id="email" placeholder="Ingrese su Email">
-				<hr>
 				<label form="contraseña">Contraseña</label>
 				<input class="Controles registro" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
-				<hr>
 			</form>
 			
 			<div>
