--- a/recetas dulces.html
+++ b/recetas dulces.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>TACC FREE | Recetas dulces</title>
+	<title>Recetas dulces</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
@@ -40,22 +40,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column"><a href="tarta de limon.html">
-				<img class="selecciondeimagenes" src="img/recetas dulces/tartalimón.png" width="200" height="200" alt="tartalimon"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/tartalimon.svg"  width="200" height="200" alt="tartalimon"/>
 				<h6>Tarta de limón</h6></a>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/brownies.png" width="200" height="200" alt="brownies"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/brownies.svg"  width="200" height="200" alt="brownies"/>
 				<h6>Brownies</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/budín.png" width="200" height="200" alt="budin"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/budin.svg"  width="200" height="200" alt="budin"/>
 				<h6>Budín</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/cheesecake.png" width="200" height="200" alt="cheesecake"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/cheesecake.svg"  width="200" height="200" alt="cheesecake"/>
 				<h6>Cheesecake</h6>
 			</div>
 			
@@ -64,22 +64,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/cookies.png" width="200" height="200" alt="cookies"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/cookies.svg"  width="200" height="200" alt="cookies"/>
 				<h6>Cookies</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/pancakes.png" width="200" height="200" alt="pancakes"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/pancakes.svg"  width="200" height="200" alt="pancakes"/>
 				<h6>Pancakes</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/alfajores.png" width="200" height="200" alt="alfajor"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/alfajores.svg"  width="200" height="200" alt="alfajor"/>
 				<h6>Alfajores</h6>	 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/tiramisu.png" width="200" height="200" alt="tiramisu"/>
+				<img class="selecciondeimagenes" src="img/recetas dulces/tiramisu.svg"  width="200" height="200" alt="tiramisu"/>
 				<h6>Tiramisú</h6>
 			</div>
 			
