--- a/recetas.html
+++ b/recetas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>TACC FREE | Recetas</title>
+	<title>Recetas</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
 				<a href="recetas dulces.html">
 					
 					<article>
-						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
+						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadadulces.svg" width="320" height="320" alt="imgresto"/> 
 						<h3 class="letrasnaranjas">Dulces</h3>
 					</article>
 				</a>
@@ -50,7 +50,7 @@
 				<a href="recetas saladas.html">
 					
 					<div>
-						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
+						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadasaladas.svg" width="320" height="320" alt="imgreceta"/>
 						<h3 class="letrasnaranjas">Saladas</h3>
 					</div>
 				</a>
