--- a/tarta de limon.html
+++ b/tarta de limon.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>TACC FREE | Tarta de limon</title>
+	<title>Tarta de limon</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
@@ -82,13 +82,13 @@
 				<section class="flex-row gap">
 
 					<div class="datosrecetas">
-						<img src="img/reloj.png" width="40" height="40" alt="reloj"/>
+						<img src="img/reloj.svg"  width="40" height="40" alt="reloj"/>
 						<h7>Tiempo:</h7>
 						<h8>1 hora</h8>
 					</div>
 
 					<div class="datosrecetas">
-						<img src="img/tilde.png" width="40" height="40" alt=""/>
+						<img src="img/tilde.svg"  width="40" height="40" alt=""/>
 						<h7>Dificultad:</h7>
 						<h8>media</h8>
 					</div>
