--- a/gracias por unirte.html
+++ b/gracias por unirte.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>TACC FREE | Gracias por unirte</title>
+	<title>Gracias por unirte</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
