--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>TACC FREE | Recetas saladas </title><link href="estilos.css" rel="stylesheet" type="text/css">
+	<title>Recetas saladas </title><link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon .ico">
@@ -40,23 +40,23 @@
 			
 			<div class="cards flex-column">
 				<a href="pizza.html">
-				<img class="selecciondeimagenes" src="img/recetas saladas/pizza.jpeg" width="200" height="200" alt="pizza"/>
+				<img class="selecciondeimagenes" src="img/recetas saladas/pizza-circular.svg"  width="200" height="200" alt="pizza"/>
 				<h6> Pizza</h6>
 				</a>
 			</div> 
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/ñoquis.png" width="200" height="200" alt="ñoquis"/>
+				<img class="selecciondeimagenes" src="img/recetas saladas/ñoquis.svg"  width="200" height="200" alt="ñoquis"/>
 				<h6>&Ntilde;oquis</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/sandwich.png" width="200" height="200" alt="sandwich"/>
+				<img class="selecciondeimagenes" src="img/recetas saladas/sandwich.svg"  width="200" height="200" alt="sandwich"/>
 				<h6>Sandwich</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/tacos.png" width="200" height="200" alt="tacos"/>
+				<img class="selecciondeimagenes" src="img/recetas saladas/tacos.svg"  width="200" height="200" alt="tacos"/>
 				<h6>Tacos</h6>  
 			</div>
 			
