--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TACC FREE | Sintaxis Palermo</title>
+<title>Sintaxis Palermo</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
